feat: modernize Korean fortune experience